k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentinelops-ingress
  namespace: sentinelops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
  - host: sentinelops.local
    http:
      paths:

      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sentinelops-frontend
            port:
              number: 80

      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sentinelops-backend
            port:
              number: 5000
